infrastructure/oauth2-proxy/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: &PODNAME oauth2-proxy
  spec:
    replicas: 1
    selector:
      matchLabels:
        pod: *PODNAME
    template:
      metadata:
        labels:
          pod: *PODNAME
      spec:
        containers:
        - name: oauth2-proxy
          image: bitnami/oauth2-proxy
          args:
          - --upstream="static://200"
          - --set-xauthrequest
          - --set-authorization-header
          - --silence-ping-logging
          resources:
            limits:
              cpu: '0.2'
              memory: '320M'
            requests:
              cpu: '0.01'
              memory: '128M'
          livenessProbe:
            httpGet:
              path: /ready
              scheme: HTTP
              port: 4180
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /ready
              scheme: HTTP
              port: 4180
            initialDelaySeconds: 5
            periodSeconds: 5
